--- a/Blog.html
+++ b/Blog.html
@@ -24,6 +24,7 @@
             </h2>
             <p>
                 Finished up the website, and polished up the user interface.<br>
+                Hosted the website.
             </p>
             <hr>
 
